tests/neg-custom-args/captures/closure-result-typing-global.scala
val c: Object^ = ???
val x: () -> Object = () => c // error
